--- a/input.css
+++ b/input.css
@@ -14,6 +14,27 @@
         --secondary-foreground: 240 5.9% 10%;
         --accent: 240 4.8% 95.9%;
         --accent-foreground: 240 5.9% 10%;
-        --radius: 1rem;
+        --border: 240 5.9% 90%;
+        --input: 240 5.9% 90%;
+        --ring: 346.8 77.2% 49.8%;
+        --radius: 0px;
     }
+
+    .dark {
+        --background: 20 14.3% 4.1%;
+        --foreground: 0 0% 95%;
+        --primary: 346.8 77.2% 49.8%;
+        --primary-foreground: 355.7 100% 97.3%;
+        --secondary: 240 3.7% 15.9%;
+        --secondary-foreground: 0 0% 98%;
+        --accent: 12 6.5% 15.1%;
+        --accent-foreground: 0 0% 98%;
+        --border: 240 3.7% 15.9%;
+        --input: 240 3.7% 15.9%;
+        --ring: 346.8 77.2% 49.8%;
+      }
+}
+
+@layer components {
+
 }
