--- a/src/atom/button/button.css
+++ b/src/atom/button/button.css
@@ -7,6 +7,7 @@
         /* Text */
         @apply text-sm font-medium;
         /* Radius */
+        @apply rounded-radius;
         /* Disabled */
         @apply disabled:opacity-50 disabled:cursor-not-allowed;
     }
