--- a/input.css
+++ b/input.css
@@ -17,7 +17,8 @@
         --border: 240 5.9% 90%;
         --input: 240 5.9% 90%;
         --ring: 346.8 77.2% 49.8%;
-        --radius: 0px;
+        --global-radius: 5px;
+        --global-shadow: 0 0px 0px 0px rgba(0, 0, 0, 0.3);
     }
 
     .dark {
@@ -33,8 +34,4 @@
         --input: 240 3.7% 15.9%;
         --ring: 346.8 77.2% 49.8%;
       }
-}
-
-@layer components {
-
 }
