--- a/src/atom/textarea/textarea.css
+++ b/src/atom/textarea/textarea.css
@@ -3,12 +3,14 @@
         /*  */
         @apply flex min-h-[80px] w-full;
         /* Text */
-        @apply text-sm;
+        @apply text-sm text-foreground;
         /* Background */
-        @apply bg-input focus:brightness-105 hover:brightness-105;
+        @apply bg-background focus:brightness-105 hover:brightness-105;
         /* Padding */
         @apply px-3 py-2;
+        /* Border */
+        @apply border border-input;
         /* Radius */
-        @apply rounded-radius;
+        @apply rounded-global-radius;
     }
 }
