--- a/input.css
+++ b/input.css
@@ -6,6 +6,7 @@
 
 @layer base {
     :root {
+        /* HSL Colors */
         --background: 0 0% 100%;
         --foreground: 240 10% 3.9%;
         --primary: 346.8 77.2% 49.8%;
@@ -17,7 +18,12 @@
         --border: 240 5.9% 90%;
         --input: 240 5.9% 90%;
         --ring: 346.8 77.2% 49.8%;
-        --global-radius: 5px;
+        /* Control global border radius */
+        /* Can be px, em, rem, %, */
+        /* Can also control each corner independently  */
+        --global-radius: 10px;
+        /* Control global shadow */
+        /* See: https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
         --global-shadow: 0 0px 0px 0px rgba(0, 0, 0, 0.3);
     }
 
@@ -33,5 +39,6 @@
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
         --ring: 346.8 77.2% 49.8%;
+        --global-shadow: 0 0px 0px 0px rgba(255, 255, 255, 0.3);
       }
 }
