--- a/input.css
+++ b/input.css
@@ -13,6 +13,8 @@
         --secondary-foreground: 123 100% 70%;
         --accent: 240 4.8% 95.9%;
         --accent-foreground: 240 5.9% 10%;
+        --muted: 240 4.8% 95.9%;
+        --muted-foreground: 240 3.8% 46.1%;
         --border: 240 5.9% 90%;
         --input: 240 5.9% 90%;
         --ring: 346.8 77.2% 49.8%;
