--- a/input.css
+++ b/input.css
@@ -78,6 +78,12 @@
       .anchor {
         @apply text-foreground/70 hover:text-foreground transition-colors cursor-pointer;
       }
+
+      dialog {
+        @apply inline;
+      }
+
+      dialog:not(:target):not([open]) { @apply hidden; }
     }
     
 /* TODO */
