--- a/input.css
+++ b/input.css
@@ -17,6 +17,8 @@
         --muted-foreground: 240 3.8% 46.1%;
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 0 0% 98%;
+        --success: 142 70% 45%;
+        --success-foreground: 120 100% 97.3%;
         --border: 240 5.9% 90%;
         --input: 240 5.9% 90%;
         --ring: 240 10% 3.9%;
