--- a/input.css
+++ b/input.css
@@ -32,7 +32,7 @@
     }
 
     .dark {
-        /* Colors */
+        /* HSL Colors */
         --background: 20 14.3% 4.1%;
         --foreground: 0 0% 95%;
         --primary: 346.8 77.2% 49.8%;
@@ -45,48 +45,100 @@
         --input: 240 3.7% 15.9%;
         --ring: 240 10% 3.9%;
         --global-shadow: 0 0px 0px 0px rgba(255, 255, 255, 0.3);
-      }
-
-      .h1 {
-        @apply text-4xl font-extrabold md:text-5xl;
-      }
-      
-      .h2 {
-        @apply text-3xl font-bold md:text-4xl;
-      }
-
-      .h3 {
-        @apply text-2xl font-semibold md:text-3xl;
-      }
-      
-      .h4 {
-        @apply text-xl font-semibold md:text-2xl;
-      }
-      
-      .h5 {
-        @apply text-lg font-semibold md:text-xl;
-      }
-      
-      .h6 {
-        @apply text-base font-semibold md:text-lg;
-      }
-
-      .paragraph {
-        @apply text-sm font-normal;
-      }
-
-      .span {
-        @apply text-sm font-normal;
-      }
-
-      .anchor {
-        @apply text-foreground/70 hover:text-foreground transition-colors cursor-pointer;
-      }
-
-      .activity {
-        @apply absolute left-[-45%] h-full w-[45%] bg-[linear-gradient(to_left,rgba(251,251,251,0.05),rgba(251,251,251,0.3),rgba(251,251,251,0.6),rgba(251,251,251,0.3),rgba(251,251,251,0.05))] bg-[-moz-linear-gradient(to_left,rgba(251,251,251,0.05),rgba(251,251,251,0.3),rgba(251,251,251,0.6),rgba(251,251,251,0.3),rgba(251,251,251,0.05))] bg-[-webkit-linear-gradient(to_left,rgba(251,251,251,0.05),rgba(251,251,251,0.3),rgba(251,251,251,0.6),rgba(251,251,251,0.3),rgba(251,251,251,0.05))] animate-[loading_1s_infinite] z-[45];
-      }
     }
+
+    .h1 {
+        @apply text-4xl font-extrabold md:text-5xl;
+    }
+      
+    .h2 {
+        @apply text-3xl font-bold md:text-4xl;
+    }
+
+    .h3 {
+        @apply text-2xl font-semibold md:text-3xl;
+    }
+      
+    .h4 {
+        @apply text-xl font-semibold md:text-2xl;
+    }
+      
+    .h5 {
+        @apply text-lg font-semibold md:text-xl;
+    }
+      
+    .h6 {
+        @apply text-base font-semibold md:text-lg;
+    }
+
+    .paragraph {
+        @apply text-medium font-normal;
+    }
+
+    .span {
+        @apply text-medium font-normal;
+    }
+
+    .anchor {
+        @apply text-foreground/70 hover:text-foreground transition-colors cursor-pointer;
+    }
+
+    .text-extrasmall {
+        @apply text-[0.5rem] md:text-[0.625rem] lg:text-[0.75rem] xl:text-[0.875rem]
+    }
+    
+    .text-small {
+        @apply text-[0.75rem] md:text-[0.875rem] lg:text-[1rem] xl:text-[1.125rem]
+    }
+    
+    .text-medium {
+        @apply text-[1rem] md:text-[1.125rem] lg:text-[1.25rem] xl:text-[1.375rem]
+    }
+    
+    .text-large {
+        @apply text-[1.25rem] md:text-[1.375rem] lg:text-[1.5rem] xl:text-[1.625rem]
+    }
+    
+    .text-extralarge {
+        @apply text-[1.5rem] md:text-[1.625rem] lg:text-[1.75rem] xl:text-[1.875rem]
+    }
+
+    .p-small {
+        @apply p-[0.12rem] md:p-[0.25rem] lg:p-[0.37rem] xl:p-[0.5rem]
+    }
+    
+    .p-medium {
+        @apply p-[0.5rem] md:p-[0.75rem] lg:p-[1rem] xl:p-[1.25rem]
+    }
+    
+    .p-large {
+        @apply p-[1rem] md:p-[1.25rem] lg:p-[1.5rem] xl:p-[1.75rem]
+    }
+    
+    .px-small {
+        @apply px-[0.12rem] md:px-[0.25rem] lg:px-[0.37rem] xl:px-[0.5rem]
+    }
+    
+    .px-medium {
+        @apply px-[0.5rem] md:px-[0.75rem] lg:px-[1rem] xl:px-[1.25rem]
+    }
+    
+    .px-large {
+        @apply px-[1rem] md:px-[1.25rem] lg:px-[1.5rem] xl:px-[1.75rem]
+    }
+    
+    .py-small {
+        @apply py-[0.12rem] md:py-[0.25rem] lg:py-[0.37rem] xl:py-[0.5rem]
+    }
+    
+    .py-medium {
+        @apply py-[0.5rem] md:py-[0.75rem] lg:py-[1rem] xl:py-[1.25rem]
+    }
+    
+    .py-large {
+        @apply py-[1rem] md:py-[1.25rem] lg:py-[1.5rem] xl:py-[1.75rem]
+    }
+}
     
 /* TODO */
 @layer utilities {
