--- a/input.css
+++ b/input.css
@@ -72,35 +72,39 @@
     }
 
     .paragraph {
-        @apply text-medium font-normal;
+        @apply font-normal;
     }
 
     .span {
-        @apply text-medium font-normal;
+        @apply font-normal;
     }
 
     .anchor {
         @apply text-foreground/70 hover:text-foreground transition-colors cursor-pointer;
     }
 
-    .text-extrasmall {
+    .d-text-extrasmall {
         @apply text-[0.5rem] md:text-[0.625rem] lg:text-[0.75rem] xl:text-[0.875rem]
     }
     
-    .text-small {
+    .d-text-small {
         @apply text-[0.75rem] md:text-[0.875rem] lg:text-[1rem] xl:text-[1.125rem]
     }
-    
-    .text-medium {
+
+    .d-text-medium {
         @apply text-[1rem] md:text-[1.125rem] lg:text-[1.25rem] xl:text-[1.375rem]
     }
     
-    .text-large {
+    .d-text-large {
         @apply text-[1.25rem] md:text-[1.375rem] lg:text-[1.5rem] xl:text-[1.625rem]
     }
     
-    .text-extralarge {
+    .d-text-extralarge {
         @apply text-[1.5rem] md:text-[1.625rem] lg:text-[1.75rem] xl:text-[1.875rem]
+    }
+
+    .p-extrasmall {
+        @apply p-[0.6rem] md:p-[0.12rem] lg:p-[0.18rem] xl:p-[0.25rem]
     }
 
     .p-small {
@@ -114,6 +118,14 @@
     .p-large {
         @apply p-[1rem] md:p-[1.25rem] lg:p-[1.5rem] xl:p-[1.75rem]
     }
+
+    .p-extralarge {
+        @apply p-[1.5rem] md:p-[1.75rem] lg:p-[2rem] xl:p-[2.25rem]
+    }
+
+    .px-extrasmall {
+        @apply px-[0.6rem] md:px-[0.12rem] lg:px-[0.18rem] xl:px-[0.25rem]
+    }
     
     .px-small {
         @apply px-[0.12rem] md:px-[0.25rem] lg:px-[0.37rem] xl:px-[0.5rem]
@@ -126,6 +138,14 @@
     .px-large {
         @apply px-[1rem] md:px-[1.25rem] lg:px-[1.5rem] xl:px-[1.75rem]
     }
+
+    .px-extralarge {
+        @apply px-[1.5rem] md:px-[1.75rem] lg:px-[2rem] xl:px-[2.25rem]
+    }
+
+    .py-extrasmall {
+        @apply py-[0.6rem] md:py-[0.12rem] lg:py-[0.18rem] xl:py-[0.25rem]
+    }
     
     .py-small {
         @apply py-[0.12rem] md:py-[0.25rem] lg:py-[0.37rem] xl:py-[0.5rem]
@@ -137,6 +157,10 @@
     
     .py-large {
         @apply py-[1rem] md:py-[1.25rem] lg:py-[1.5rem] xl:py-[1.75rem]
+    }
+
+    .py-extralarge {
+        @apply py-[1.5rem] md:py-[1.75rem] lg:py-[2rem] xl:py-[2.25rem]
     }
 }
     
