--- a/docsite/css/input.css
+++ b/docsite/css/input.css
@@ -21,7 +21,8 @@
         --border: 240deg 5.9% 90%;
         --input: 240deg 5.9% 90%;
         --ring: 240deg 10% 3.9%;
-        --global-radius: 10px;
+        --global-radius: 5px;
+        --global-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
     }
     
     .dark {
@@ -42,6 +43,7 @@
         --border: 240deg 5% 50%;
         --input: 240deg 5% 50%;
         --ring: 0deg 0% 100%;
+        --global-shadow: 0 1px 3px 0 rgb(255 255 255 / 0.3), 0 1px 2px -1px rgb(255 255 255 / 0.3);
     }
 
     .h1 {
