--- a/css/input.css
+++ b/css/input.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 @layer base {
     /* :root {
         --background: 0 0% 100%;
